kubernetes/wordpress-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-lb
  namespace: wordpress
spec:
  selector:
    app: wordpress
  ports:
  - port: 80
    targetPort: 80
  type: LoadBalancer
